# custom-supplements

./: .travis.yml  CMakeLists.txt  LICENSE.TXT  README.CMake  README.CUSTOM  README.TXT
cmake/: ConfigDefault.cmake  ConfigUserTemplate.cmake
cmake/modules/: ConfigCMake.cmake  FindGDAL.cmake  FindNETCDF.cmake
doc/rst/: CMakeLists.txt  conf.py.in
doc/rst/source/: gmtmercmap.rst  gmtparser.rst  grdfourier.rst
src/: CMakeLists.txt  custom_config.h.in  custom_version.h.in  gmt_custom_glue.c  gmt_custom_module.c  gmt_custom_module.h.orig  gmt_custom_moduleinfo.txt  gmt_make_custom_code.sh  gmt_make_module_src.sh  gmtaverage.c  gmtmercmap.c  gmtparser.c  grdfourier.c  make_custom_module_src.sh
test/: mercmap.sh
